--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "formik": "^2.4.3",
     "framer-motion": "^10.15.1",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
-    "redux": "^4.2.1",
-    "redux-toolkit": "^1.1.2"
+    "react-switch": "^7.0.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
