--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@jitsi/react-sdk": "^1.3.0",
+    "@nextui-org/react": "^2.1.10",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "formik": "^2.4.3",
-    "framer-motion": "^10.15.1",
+    "framer-motion": "^10.16.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
