--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@nextui-org/react": "^2.1.10",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "formik": "^2.4.3",
     "framer-motion": "^10.16.2",
     "jwt-decode": "^3.1.2",
@@ -22,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-switch": "^7.0.0",
