--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@jitsi/react-sdk": "^1.3.0",
     "@nextui-org/react": "^2.1.10",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/react-stripe-js": "^2.3.0",
+    "@stripe/stripe-js": "^2.1.5",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
@@ -20,6 +22,7 @@
     "framer-motion": "^10.16.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
