--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
   "dependencies": {
     "@jitsi/react-sdk": "^1.3.0",
     "@nextui-org/react": "^2.1.10",
+    "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/react-stripe-js": "^2.3.0",
     "@stripe/stripe-js": "^2.1.5",
+    "@visx/gradient": "^3.3.0",
+    "@visx/group": "^3.3.0",
+    "@visx/mock-data": "^3.3.0",
+    "@visx/scale": "^3.3.0",
+    "@visx/shape": "^3.3.0",
+    "@visx/visx": "^3.3.0",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
@@ -31,6 +38,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-switch": "^7.0.0",
+    "recharts": "^2.8.0",
     "redux": "^4.2.1",
     "yup": "^1.2.0"
   },
