--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@visx/visx": "^3.3.0",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "dotenv": "^16.3.1",
     "formik": "^2.4.3",
     "framer-motion": "^10.16.2",
